[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.19.0"

# lalrpop-util in this specific version required for circom parser to work
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
# circom = { git = "https://github.com/iden3/circom", package = "parser" }
circom_parser = { git = "https://github.com/iden3/circom", package = "parser" }
circom_type_checker = { git = "https://github.com/iden3/circom", package = "type_analysis" }
circom_structure = { git = "https://github.com/iden3/circom", package = "program_structure" }
ropey = "1.6.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "io-std"] }
codespan-reporting = "0.9.0"
itertools = "0.10.5"
num-traits = "0.2.6"
tempfile = "3"
