[package]
name = "circom-lsp"
version = "0.1.0"
edition = "2021"
authors = ["rubydusa <rubydusa@protonmail.com>"]
license = "GPL-3.0 license"
description = "LSP server for Circom"
homepage = "https://github.com/rubydusa/circom-lsp"
repository = "https://github.com/rubydusa/circom-lsp"

[dependencies]
tower-lsp = "0.19.0"

# lalrpop-util in this specific version required for circom parser to work
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
circom_parser = { git = "https://github.com/iden3/circom", package = "parser", rev = "ce903c6" }
circom_type_checker = { git = "https://github.com/iden3/circom", package = "type_analysis", rev = "ce903c6" }
circom_structure = { git = "https://github.com/iden3/circom", package = "program_structure", rev = "ce903c6" }
ropey = "1.6.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "io-std"] }
codespan-reporting = "0.9.0"
itertools = "0.10.5"
num-traits = "0.2.6"
tempfile = "3"
