[package]
name = "circom-lsp-type-analysis"
version = "2.1.5"
authors = ["Costa Group UCM","iden3"]
license = "GPL-3.0"
description = "Support crate for circom-lsp"
edition = "2018"

[dependencies]
program_structure = {path = "../program_structure", package = "circom-lsp-program-structure", version = "2.1.5"}
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
